tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__16kComponent-AAAAAAAAAAAAAAAAAAAE5Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1253,
  "prerequisites": [
    1319
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Second largest vanilla storage component, used to make 16k ME storage cells, or can be upgraded to make 64k ME storage components. Can be recovered from a crafted 16k ME storage cell by fully emptying the storage cell, and shift-clicking it in your hand.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "16k Component",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1319
  ],
  "rewards": [],
  "tasks": []
}
